fix alignment by default

--- a/src/blocks/section-header/editor.scss
+++ b/src/blocks/section-header/editor.scss
@@ -4,7 +4,8 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-blocksmg-blockName {
+.wp-block-blocksmg-section-header {
+	text-align: left;
 
 	&.is-selected {
 		box-shadow: 0 0 0 1.5px #5D3587 !important;
